--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-device-detect": "^1.14.0",
     "react-dom": "^17.0.1",
     "react-reveal": "^1.2.2",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.0",
     "react-square-payment-form": "^0.7.2",
     "react-square-web-payments-sdk": "^3.2.1",
     "retry-axios": "^2.4.0",
@@ -51,10 +51,9 @@
       "react-app/jest"
     ]
   },
-  "browserslist": 
-    [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
